<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetailActivity">

    <TextView
        android:id="@+id/fooddetail_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:labelFor="@id/fooddetail_name_edittext"
        app:layout_constraintBottom_toBottomOf="@+id/fooddetail_name_edittext"
        app:layout_constraintEnd_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fooddetail_name_edittext" />

    <com.cielyang.android.clearableedittext.ClearableEditText
        android:id="@+id/fooddetail_name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fooddetail_upload_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload"
        android:textSize="18sp"
        android:labelFor="@id/fooddetail_upload_edittext"
        app:layout_constraintBottom_toBottomOf="@+id/fooddetail_upload_edittext"
        app:layout_constraintEnd_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fooddetail_upload_edittext" />

    <com.cielyang.android.clearableedittext.ClearableEditText
        android:id="@+id/fooddetail_upload_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:inputType="date"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fooddetail_name_edittext" />

    <TextView
        android:id="@+id/fooddetail_production_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/production"
        android:textSize="18sp"
        android:labelFor="@id/fooddetail_production_edittext"
        app:layout_constraintBottom_toBottomOf="@+id/fooddetail_production_edittext"
        app:layout_constraintEnd_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fooddetail_production_edittext" />

    <com.cielyang.android.clearableedittext.ClearableEditText
        android:id="@+id/fooddetail_production_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:inputType="date"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fooddetail_upload_edittext" />

    <TextView
        android:id="@+id/fooddetail_expiration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/expiration"
        android:textSize="18sp"
        android:labelFor="@id/fooddetail_expiration_label"
        app:layout_constraintBottom_toBottomOf="@+id/fooddetail_expiration_edittext"
        app:layout_constraintEnd_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fooddetail_expiration_edittext" />

    <com.cielyang.android.clearableedittext.ClearableEditText
        android:id="@+id/fooddetail_expiration_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:inputType="date"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fooddetail_production_edittext" />

    <TextView
        android:id="@+id/fooddetail_note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/note"
        android:textSize="18sp"
        android:labelFor="@id/fooddetail_note_edittext"
        app:layout_constraintBottom_toBottomOf="@+id/fooddetail_note_edittext"
        app:layout_constraintEnd_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fooddetail_note_edittext" />

    <com.cielyang.android.clearableedittext.ClearableEditText
        android:id="@+id/fooddetail_note_edittext"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:inputType="text|textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fooddetail_expiration_edittext" />

    <Switch
        android:id="@+id/fooddetail_counttype_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:showText="false"
        app:layout_constraintBottom_toBottomOf="@+id/fooddetail_count_percentage_seekBar"
        app:layout_constraintStart_toEndOf="@+id/fooddetail_counttype_label"
        app:layout_constraintTop_toTopOf="@+id/fooddetail_count_percentage_seekBar" />

    <TextView
        android:id="@+id/fooddetail_counttype_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/fooddetail_count_number_editText"
        android:text="@string/switch_counttype_percentage"
        app:layout_constraintBottom_toBottomOf="@+id/fooddetail_count_percentage_seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fooddetail_count_percentage_seekBar" />

    <SeekBar
        android:id="@+id/fooddetail_count_percentage_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fooddetail_note_edittext" />

    <EditText
        android:id="@+id/fooddetail_count_number_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fooddetail_vertical_35_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fooddetail_count_percentage_seekBar" />

    <ImageView
        android:id="@+id/fooddetail_photo_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img_desc_food_activity_image"
        app:layout_constraintBottom_toTopOf="@+id/fooddetail_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fooddetail_count_number_editText" />

    <Button
        android:id="@+id/fooddetail_save_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/fooddetail_vertical_35_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>


</android.support.constraint.ConstraintLayout>